pxl.h

// ── Math types ───────────────────────────────────────────────────────────────

typedef struct { float x, y; }               PxlVec2;
typedef uint32_t                             PxlColor;   // RGBA packed: 0xAABBGGRR
// ── Opaque handles ───────────────────────────────────────────────────────────

typedef struct PxlTexture     PxlTexture;
typedef struct PxlAnimPlayer  PxlAnimPlayer;
// ── Config types ─────────────────────────────────────────────────────────────

typedef struct {
    const char *  window_title;
    int32_t       width;
    int32_t       height;
    int32_t       sample_count;
    int32_t       swap_interval;
    bool          high_dpi;
    bool          fullscreen;
    bool          debug_render_enabled;
    PxlColor      clear_color;
    bool          disable_vsync;
    bool          enable_clipboard;
    bool          enable_dragndrop;
    bool          srgb;
    bool          hdr;
    int32_t       design_width;
    int32_t       design_height;
    int32_t       resolution_policy;
    bool          bloom_enabled;
    int32_t       bloom_downsample;
    float         bloom_threshold;
    float         bloom_intensity;
    float         bloom_blur_radius;
} PxlConfig;
typedef struct {
    void (*setup)(void);
    void (*update)(void);
    void (*render)(void);
    void (*shutdown)(void);
} PxlCallbacks;
typedef struct {
    uint32_t  clear_color_value;
    bool      has_clear_color;
    bool      has_camera;
    float     cam_offset_x;
    float     cam_offset_y;
    float     cam_zoom;
    float     cam_rotation;
    bool      pixel_snap;
} PxlPass;
// ── Entrypoint ───────────────────────────────────────────────────────────────

void pxl_run(PxlConfig config, PxlCallbacks callbacks);
// ── Pass ─────────────────────────────────────────────────────────────────────

void pxl_pass_begin(PxlPass pass);
void pxl_pass_end(void);
// ── Drawing ──────────────────────────────────────────────────────────────────

void pxl_draw_rect(float x, float y, float w, float h, PxlColor color);
void pxl_draw_line(float x1, float y1, float x2, float y2, float thickness, PxlColor color);
void pxl_draw_circle(float cx, float cy, float radius, uint32_t segments, PxlColor color);
void pxl_draw_texture(PxlTexture* tex, float x, float y);
void pxl_draw_textured_rect(PxlTexture* tex,
    float dst_x, float dst_y, float dst_w, float dst_h,
    float src_x, float src_y, float src_w, float src_h, PxlColor color);
void pxl_draw_text(const char* text, float x, float y, PxlColor color);
// ── Time ─────────────────────────────────────────────────────────────────────

float    pxl_time_dt(void);
uint32_t pxl_time_fps(void);
bool pxl_input_key_pressed(int32_t keycode);
void pxl_input_mouse_pos(float* x, float* y);
void pxl_input_add_binding(const void* action, size_t action_len, int32_t keycode);
PxlVec2 pxl_input_get_vector(const void* neg_x, size_t neg_x_len, const void* pos_x, size_t pos_x_len, const void* neg_y, size_t neg_y_len, const void* pos_y, size_t pos_y_len, int32_t diagonal);
float   pxl_window_widthf(void);
float   pxl_window_heightf(void);
void pxl_assets_destroy_texture(PxlTexture* tex);
// Path-based loaders: pass a file path + length. Manifest assets resolve by
// path; other paths load from disk at runtime (desktop/Android only).
PxlTexture*  pxl_assets_load_texture_path(const char* path, size_t path_len);
PxlAnimPlayer*  pxl_anim_player_create(void);
void            pxl_anim_player_destroy(PxlAnimPlayer* player);
void            pxl_anim_player_play(PxlAnimPlayer* player, uint32_t anim_id);
void            pxl_anim_player_update(PxlAnimPlayer* player, float dt);
bool            pxl_anim_player_finished(PxlAnimPlayer* player);
// Fills out-params from the current frame. Returns false when there's no
// animation or no frames.
bool pxl_anim_player_current_frame(PxlAnimPlayer* player,
    PxlTexture** tex,
    float* src_x, float* src_y, float* src_w, float* src_h,
    PxlColor* color, bool* flip_x, bool* flip_y);
uint32_t    pxl_aseprite_tag_anim(uint32_t tag_id);
PxlTexture* pxl_aseprite_load_path(const char* path, size_t path_len);
uint32_t    pxl_aseprite_find_id(const char* path, size_t path_len); // UINT32_MAX if not found